--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ android:
   components:
     - tools
     - platform-tools
-    - tools
-
-    - build-tools-27.0.0
+    - build-tools-27.0.3
     - android-27
 
+before_install:
+    - chmod +x gradlew
