--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,15 @@
 language: android
-
-jdk:
-  - oraclejdk8
-
-install:
-  - echo yes | sdkmanager "tools" &>/dev/null
-  - echo yes | sdkmanager "platform-tools" &>/dev/null
-  - echo yes | sdkmanager "build-tools;27.0.3" &>/dev/null
-  - echo yes | sdkmanager "platforms;android-27" &>/dev/null
-
+android:
+  components:
+    - tools
+    - platform-tools
+    - tools
+    # The BuildTools version used by your project
+    - build-tools-27.0.3
+    # The SDK version used to compile your project
+    - android-27
 script:
-  - ./gradlew clean testDebug lintDebug -Dscan --stacktrace
-
-sudo: false
-
-before_cache:
-  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-    - - $HOME/.android/build-cache
-
+  - ./gradlew build
 before_install:
 - chmod +x gradlew
+
