--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ android:
     # The SDK version used to compile your project
     - android-27
 script:
-  - ./gradlew build
+  - ./gradlew build connectedCheck
 before_install:
 - chmod +x gradlew
 
