--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,8 @@ android:
     - build-tools-27.0.3
     # The SDK version used to compile your project
     - android-27
-
+before_script:
+- chmod +x gradlew
+script:
+  - ./gradlew build connectedCheck
 
