--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ android:
     # The SDK version used to compile your project
     - android-27
 script:
-  - gradle build connectedCheck
+  - ./gradlew build connectedCheck
 
