--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ android:
     - build-tools-27.0.3
     # The SDK version used to compile your project
     - android-27
-script:
-  - ./gradlew build connectedCheck
+before_script:
+  - chmod +x gradlew
 
