--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ android:
     - build-tools-27.0.3
     # The SDK version used to compile your project
     - android-27
-before_script:
+before_install:
   - chmod +x gradlew
+script:
+  - chmod +x ./gradlew
 
