--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: android
 android:
   components:
     - tools
-    - platform-tools
     - tools
+    - platform-tools
     # The BuildTools version used by your project
     - build-tools-27.0.3
     # The SDK version used to compile your project
     - android-27
 before_install:
-  - chmod +x gradlew
+  - yes | sdkmanager "platforms;android-27"
 script:
-  - chmod +x ./gradlew
+  - ./gradlew build connectedCheck
 
